# events.vas3k.club

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  manage.py  pyproject.toml
authn/: views.py
authn/providers/: club.py
common/markdown/: club_renderer.py  markdown.py
etc/: crontab
etc/nginx/: events.vas3k.club.conf
events/: calendar.py  forms.py  models.py  views.py
events/migrations/: 0001_initial.py  0002_event_intro_event_managers.py  0003_event_icon_event_location_url_alter_event_image.py  0004_tickettypeoptions_tickettype_options.py  0005_tickettypechecklist.py  0006_delete_tickettypeoptions_alter_event_options_and_more.py  0007_remove_event_template_and_more.py  0008_remove_tickettype_is_free_event_event_is_free_event.py  0009_rename_stripe_product_id_tickettype_stripe_price_id.py  0010_tickettype_special_code.py  0011_remove_event_is_free_event_and_more.py
events/templatetags/: events.py  text_filters.py
godmode/: config.py  models.py
landing/: views.py
notifications/: helpers.py  models.py  views.py
notifications/migrations/: 0001_initial.py
notifications/telegram/: sender.py
static/css/: base.css  events.css  fonts.css  index.css  landing.css  layout.css  mobile.css  theme.css  tickets.css  users.css
templates/: email.html  error.html  landing.html  layout.html  message.html
tickets/: csv.py  helpers.py  models.py  stripe.py  views.py
users/: models.py  views.py
utils/: wait_for_postgres.py
vas3k_events/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
(+33 files in other folders)
