[project]
name = "vas3k-events"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasily Zubarev",email = "me@vas3k.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0)",
    "psycopg[pool] (>=3.3.2,<4.0.0)",
    "authlib (>=1.6.6,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "stripe (>=14.2.0,<15.0.0)",
    "mistune (>=3.2.0,<4.0.0)",
    "slugify (>=0.0.1,<0.0.2)",
    "premailer (>=3.10.0,<4.0.0)",
    "python-telegram-bot (>=22.5,<23.0)",
    "sentry-sdk[django] (>=2.50.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false